Raw service discovery moved to its own module.